Improve handling of spaces in command execution utility on Windows (#757)